--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117071903-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+
+    function gtag () {dataLayer.push(arguments)}
+
+    gtag('js', new Date())
+
+    gtag('config', 'UA-117071903-1')
+  </script>
 </head>
 <body>
 <app-root></app-root>
